mutants.out/log/crates__idle-ipc__src__ffi_cell.rs_line_28_col_9.log

*** crates/idle-ipc/src/ffi_cell.rs:28:9: replace <impl From<TerminalCell> for FfiTerminalCell>::from -> Self with Default::default()

*** mutation diff:
--- crates/idle-ipc/src/ffi_cell.rs
+++ replace <impl From<TerminalCell> for FfiTerminalCell>::from -> Self with Default::default()
@@ -20,26 +20,17 @@
     pub bg_r: u8,
     pub bg_g: u8,
     pub bg_b: u8,
     pub bold: u8,
 }
 
 impl From<TerminalCell> for FfiTerminalCell {
     fn from(cell: TerminalCell) -> Self {
-        Self {
-            ch: cell.ch as u32,
-            fg_r: cell.fg.0,
-            fg_g: cell.fg.1,
-            fg_b: cell.fg.2,
-            bg_r: cell.bg.0,
-            bg_g: cell.bg.1,
-            bg_b: cell.bg.2,
-            bold: if cell.bold { 1 } else { 0 },
-        }
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 }
 
 impl From<FfiTerminalCell> for TerminalCell {
     fn from(ffi: FfiTerminalCell) -> Self {
         Self {
             ch: std::char::from_u32(ffi.ch).unwrap_or(' '),
             fg: (ffi.fg_r, ffi.fg_g, ffi.fg_b),


*** /home/jeryd/.rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=idle-ipc@0.4.0
warning: /tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/idle-daemon/Cargo.toml: file `/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/idle-daemon/src/main.rs` found to be present in multiple build targets:
  * `bin` target `idle-daemon`
  * `bin` target `idlescreen-daemon`
  * `bin` target `trance-daemon`
warning: /tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/idle-cli/Cargo.toml: file `/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/idle-cli/src/main.rs` found to be present in multiple build targets:
  * `bin` target `idle`
  * `bin` target `idlescreen`
  * `bin` target `trance`
       Fresh cfg-if v1.0.4
       Fresh unicode-ident v1.0.24
       Fresh libc v0.2.188
       Fresh bitflags v2.13.1
       Fresh linux-raw-sys v0.12.1
       Fresh autocfg v1.5.1
       Fresh fastrand v2.5.0
       Fresh once_cell v1.21.4
       Fresh proc-macro2 v1.0.107
       Fresh getrandom v0.3.4
       Fresh getrandom v0.4.3
       Fresh wait-timeout v0.2.1
       Fresh bit-vec v0.8.0
       Fresh quick-error v1.2.3
       Fresh fnv v1.0.7
       Fresh regex-syntax v0.8.11
       Fresh unarray v0.1.4
       Fresh quote v1.0.47
       Fresh rand_core v0.9.5
       Fresh rustix v1.1.4
       Fresh zerocopy v0.8.55
       Fresh bit-set v0.8.0
       Fresh syn v2.0.119
       Fresh ppv-lite86 v0.2.21
       Fresh tempfile v3.27.0
       Fresh num-traits v0.2.19
       Fresh rand v0.9.5
       Fresh rand_xorshift v0.4.0
       Fresh bytemuck_derive v1.11.0
       Fresh rusty-fork v0.3.1
       Fresh rand_chacha v0.9.0
       Fresh bytemuck v1.25.2
       Fresh proptest v1.11.0
       Fresh idle-api v2.3.1 (/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/idle-api)
       Dirty idle-ipc v0.4.0 (/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/crates/idle-ipc): the file `crates/idle-ipc/src/ffi_cell.rs` has changed (1784876859.286544543s, 1s after last build at 1784876858.544190616s)
   Compiling idle-ipc v0.4.0 (/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/crates/idle-ipc)
     Running `/home/jeryd/.rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name idle_ipc --edition=2024 crates/idle-ipc/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a0b8bba603035d0f -C extra-filename=-dbadf11ecf5c7d57 --out-dir /tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/deps --extern idle_api=/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/deps/libidle_api-fffa68b90ae709d7.rlib --extern libc=/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/deps/liblibc-07c3a6f7013cd5d4.rlib --extern proptest=/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/deps/libproptest-b92098e6fc18f2e8.rlib`
     Running `/home/jeryd/.rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name idle_ipc --edition=2024 crates/idle-ipc/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=f6298ca08a0d4778 -C extra-filename=-72a23dfc47ffc5d4 --out-dir /tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/deps --extern idle_api=/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/deps/libidle_api-fffa68b90ae709d7.rmeta --extern libc=/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/deps/liblibc-07c3a6f7013cd5d4.rmeta`
error[E0277]: the trait bound `FfiTerminalCell: Default` is not satisfied
  --> crates/idle-ipc/src/ffi_cell.rs:28:9
   |
28 |         Default::default() /* ~ changed by cargo-mutants ~ */
   |         ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `FfiTerminalCell`
   |
help: consider annotating `FfiTerminalCell` with `#[derive(Default)]`
   |
15 + #[derive(Default)]
16 | pub struct FfiTerminalCell {
   |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `idle-ipc` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/jeryd/.rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name idle_ipc --edition=2024 crates/idle-ipc/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=f6298ca08a0d4778 -C extra-filename=-72a23dfc47ffc5d4 --out-dir /tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/deps --extern idle_api=/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/deps/libidle_api-fffa68b90ae709d7.rmeta --extern libc=/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/deps/liblibc-07c3a6f7013cd5d4.rmeta` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `ffi_cell::FfiTerminalCell: Default` is not satisfied
  --> crates/idle-ipc/src/ffi_cell.rs:28:9
   |
28 |         Default::default() /* ~ changed by cargo-mutants ~ */
   |         ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `ffi_cell::FfiTerminalCell`
   |
help: consider annotating `ffi_cell::FfiTerminalCell` with `#[derive(Default)]`
   |
15 + #[derive(Default)]
16 | pub struct FfiTerminalCell {
   |

error: could not compile `idle-ipc` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/jeryd/.rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name idle_ipc --edition=2024 crates/idle-ipc/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a0b8bba603035d0f -C extra-filename=-dbadf11ecf5c7d57 --out-dir /tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/deps --extern idle_api=/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/deps/libidle_api-fffa68b90ae709d7.rlib --extern libc=/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/deps/liblibc-07c3a6f7013cd5d4.rlib --extern proptest=/tmp/cargo-mutants-idle-audit-graph-cD0Zdb.tmp/target/debug/deps/libproptest-b92098e6fc18f2e8.rlib` (exit status: 1)

*** result: Failure(101)
